<?xml version="1.0"?>
<package>
  <name>arti_profiling</name>
  <version>1.0.0</version>
  <description>The arti_profiling package</description>


  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>

  <!-- <url type="website">http://wiki.ros.org/arti_profiling</url> -->

  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
