<?xml version="1.0"?>
<package format="2">
  <name>arti_ros_param</name>
  <version>1.0.0</version>
  <description>The arti_ros_param package</description>

  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
